update, delete, css 수정

--- a/sample_board/Views/Board/view.cshtml
+++ b/sample_board/Views/Board/view.cshtml
@@ -31,3 +31,13 @@
         <a href="list" class="btn">목록</a>
     </div>
 </div>
+<script>
+    function modify() {
+        $('form').attr('action', 'modify').submit();
+    }
+
+    function deleteItem() {
+        if (!confirm('삭제하시겠습니까?')) return;
+        $('form').attr('action', 'delete').submit();
+    }
+</script>
