--- a/sample_board/Views/Board/modify.cshtml
+++ b/sample_board/Views/Board/modify.cshtml
@@ -4,9 +4,10 @@
 }
 
 <div class="sub_content">
-    <h2>테스트 등록</h2>
+    <h2>테스트 수정</h2>
     <div class="manager_detail">
         <form method="post" enctype="multipart/form-data">
+            <input type="hidden" name="idx" value="@ViewBag.item.idx" />
             <table>
                 <caption>테스트 입력 테이블</caption>
                 <colgroup>
@@ -17,11 +18,11 @@
                 </colgroup>
                 <tr>
                     <th scope="row"><label for="title">* 제목</label></th>
-                    <td colspan="3"><input type="text" name="title" id="title" class="title" maxlength="50" value="" /></td>
+                    <td colspan="3"><input type="text" name="title" id="title" class="title" maxlength="50" value="@ViewBag.item.title" /></td>
                 </tr>
                 <tr>
                     <th scope="row"><label for="pw">* 내용</label></th>
-                    <td colspan="3"><textarea rows="20" cols="30" id="contents" name="contents"></textarea> </td>
+                    <td colspan="3"><textarea rows="20" cols="30" id="contents" name="contents">@ViewBag.item.contents</textarea> </td>
                 </tr>
                 <tr>
                     <th scope="row"><label for="name">* 파일</label></th>
@@ -46,16 +47,16 @@
         </form>
     </div>
     <div class="btn_area">
-        <a href="javascript:void(0);" class="btn" onclick="register();">확인</a>
+        <a href="javascript:void(0);" class="btn" onclick="modify();">수정</a>
         <a href="list" class="btn">목록</a>
     </div>
 </div>
 <script>
-    function register() {
-        if (!confirm('등록하시겠습니까')) return;
+    function modify() {
+        if (!confirm('수정하시겠습니까')) return;
         if (!$('#title').required()) return;
         if (!$('#contents').required()) return;
-        $('form').attr('action', 'registerProc').submit();
+        $('form').attr('action', 'modifyProc').submit();
     };
-    
+
 </script>
