검색 기능 추가

--- a/sample_board/Views/Shared/_Layout.cshtml
+++ b/sample_board/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <script src="/resources/js/jquery-1.12.4.min.js"></script>
     <script src="/resources/js/jquery-ui.min.js"></script>
     <script src="/resources/js/jquery.cust.js"></script>
+    <script src="/resources/js/common.js"></script>
 </head>
 <body>
     <div id="wrap">
